--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,39 @@ header {
     padding-top: 5px;
 }
 
+.row {
+	color: white;
+	background-color: #333;
+	border-radius: 10px;
+	margin-left: 10px;
+	margin-right: 10px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 30%;
+}
+
+.right {
+  width: 60%;
+}
+
+.left h2 {
+  margin-bottom: 10px;
+}
+
+.row img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
 ul {
 	list-style-type: none;
 }
